Added equals and hashCode contract to class Match in order to be in line with new test scenario for updating game. Added Edge Case to tests when match  doesnt exist or updating values are incorrect. Changed list of matches to be global useful in tests